# bctdicom

./: .gitignore  README.md  pyproject.toml
bctdicom/: apps.py  dicom.py  thick.py  util.py
src/bctdicom/: apps.py  io.py
tests/: test_thick.py
