[project]
authors = [{name = "Ashkan Pakzad", email = "20229564+ashkanpakzad@users.noreply.github.com"}]
dependencies = []
name = "bctdicom"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
bctdicom = { path = ".", editable = true }

[tool.pixi.tasks]
