[project]
authors = [{name = "Ashkan Pakzad", email = "20229564+ashkanpakzad@users.noreply.github.com"}]
dependencies = []
name = "bctdicom"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
bctdicom = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.1,<3"
scipy = ">=1.16.0,<2"
pynrrd = ">=0.4.2,<0.5"
tqdm = ">=4.67.1,<5"
typer = ">=0.16.0,<0.17"
