[project]
authors = [{name = "Ashkan Pakzad", email = "20229564+ashkanpakzad@users.noreply.github.com"}]
dependencies = []
name = "bctdicom"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64","linux-64"]

[tool.pixi.pypi-dependencies]
bctdicom = { path = ".", editable = true }

[tool.pixi.tasks]
test = "python -m pytest tests/"

[tool.pixi.dependencies]
numpy = ">=1.25.0,<2"
scipy = ">=1.16.0,<2"
pynrrd = ">=0.4.2,<0.5"
tqdm = ">=4.67.1,<5"
typer = ">=0.16.0,<0.17"
pytest = ">=8.4.1,<9"
h5py = ">=3.14.0,<4"
pydicom = ">=3.0.1,<4"
